--- a/scss/3-layout/_pricing.scss
+++ b/scss/3-layout/_pricing.scss
@@ -57,6 +57,9 @@
         .plan-cta {
             margin-bottom: 2rem;
         }
+        @media (max-width:991px) {
+            margin-bottom: 3rem;
+        }
     }
 }
 
